--- a/artifacts/rollout/cp1-minimal-2026-02-22.md
+++ b/artifacts/rollout/cp1-minimal-2026-02-22.md
@@ -2,7 +2,7 @@
 
 - Marker: `[proposer:taotao-db]`
 - Branch: `taotao/cp1-minimal-impl`
-- PR URL: pending
+- PR URL: `https://github.com/OpenDCAI/leonai/pull/74`
 - Screenshot absolute path: `/home/ubuntu/Aria/Projects/leonai/worktrees/desks/taotao-db-cp1-pr/artifacts/screenshots/leon-fe-cp1-2026-02-22.png`
 - Screenshot command evidence:
   - `node /home/ubuntu/codex-smoke/tools/webshot.mjs http://127.0.0.1:5272/ /home/ubuntu/Aria/Projects/leonai/worktrees/desks/taotao-db-cp1-pr/artifacts/screenshots/leon-fe-cp1-2026-02-22.png`
